Initial changes and fake data

--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,32 @@
-.container {max-width: 800px; margin: 0 auto; overflow: auto;}
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
+  overflow: auto;
+}
 
-h3 {padding-top: 18px;}
+h3 {
+  padding-top: 18px;
+}
 h1 {
   font-size: 36px;
-  padding-top: .5rem;
-  margin-top:0px;
-  margin-bottom:0px;
+  padding-top: 0.5rem;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 table {
-  border-spacing: 0; width: 100%;
-  background-color: #FFF;
+  border-spacing: 0;
+  width: 100%;
+  background-color: #fff;
   border-collapse: collapse;
 }
 
 tbody tr:nth-child(odd) {
-  background-color: #F0F0F0;
-
+  background-color: #f0f0f0;
 }
 
-th, td {
+th,
+td {
   text-align: left;
   vertical-align: middle;
   padding: 8px;
@@ -27,36 +34,56 @@ th, td {
 
 th.number,
 td.number {
-  width: 10%;
+  width: 5%;
+  text-align: center;
 }
 
 th.name,
 td.name {
-  width: 40%;
+  width: 10%;
 }
 
-th.prize,
-td.prize {
-  width: 40%;
+th.description,
+td.description {
+  width: 45%;
 }
 
 th.cat,
 td.cat {
-  width: 10%;
+  width: 40%;
 }
 
-h1 a, #footer a{
+h1 a,
+#footer a {
   text-decoration: none;
-  border:none;
+  border: none;
 }
 
-td a {line-height: 24px;}
-tr {height: 50px;}
-ul, ol {text-indent: 0; margin: 0; padding-left: 20px;}
-ul li {padding-bottom: 6px; line-height: 22px;}
+td a {
+  line-height: 24px;
+}
+tr {
+  height: 50px;
+}
+ul,
+ol {
+  text-indent: 0;
+  margin: 0;
+  padding-left: 20px;
+}
+ul li {
+  padding-bottom: 6px;
+  line-height: 22px;
+}
 
-.half {max-width: 50%; display: inline-block; vertical-align: top;}
-.half:nth-child(odd) {padding-left: 20px;}
+.half {
+  max-width: 50%;
+  display: inline-block;
+  vertical-align: top;
+}
+.half:nth-child(odd) {
+  padding-left: 20px;
+}
 
 /* older css */
 
@@ -65,32 +92,54 @@ body {
   font-size: 16px;
 
   color: #062946;
-  background-color:#fff;
+  background-color: #fff;
 
   margin: 0;
   padding: 0;
   overflow: auto;
 }
 
+img {
+  width: 100%;
+}
+hr {
+  border: 2px solid #ccf4ff;
+}
 
-img {width: 100%;}
-hr {border: 2px solid #CCF4FF;}
-
-p a, a {
+p a,
+a {
   color: #062946;
   text-decoration: none;
   padding-bottom: 0px;
-  border-bottom: 2px #CCCCCC dotted;
+  border-bottom: 2px #cccccc dotted;
 }
-a:hover {color: #36648B;}
-a:active {color: #36648B;}
-small {padding: 10px 0px;}
-p, ol {line-height: 1.4;}
-text {font-size: 12px;}
+a:hover {
+  color: #36648b;
+}
+a:active {
+  color: #36648b;
+}
+small {
+  padding: 10px 0px;
+}
+p,
+ol {
+  line-height: 1.4;
+}
+text {
+  font-size: 12px;
+}
 
-body.index p:nth-of-type(2) {font-size: 30px;}
-body.index table {border: 4px solid #CCF4FF; padding: 18px;}
-.home-link {color: #47CCFC;}
+body.index p:nth-of-type(2) {
+  font-size: 30px;
+}
+body.index table {
+  border: 4px solid #ccf4ff;
+  padding: 18px;
+}
+.home-link {
+  color: #47ccfc;
+}
 
 /* funsies */
 /*::selection {background: #44FFB4;}
@@ -106,19 +155,19 @@ input {
   padding: 8px;
   font-family: sans-serif;
 }
-.search_container{
-  text-align:center;
+.search_container {
+  text-align: center;
 }
 
 #header {
-  width:800px;
-  background-color:#fff;
-  color:#062946;
-  z-index:999999;
-  text-align:center;
+  width: 1000px;
+  background-color: #fff;
+  color: #062946;
+  z-index: 999999;
+  text-align: center;
 }
 
-#footer{
+#footer {
   background-color: #fff;
   color: #062946;
   text-align: center;
@@ -128,7 +177,6 @@ input {
 #hackathon {
   margin: 30px 0 10px 0;
 }
-
 
 @media (max-width: 768px) {
   #header {
@@ -157,48 +205,49 @@ input {
 
   th.cat,
   td.cat {
-    display:none;
+    display: none;
   }
 
   #hackathon {
     margin: 30px 0 10px 8px;
   }
 
-  #footer p{
-    text-align:left;
-    padding:0 10px;
+  #footer p {
+    text-align: left;
+    padding: 0 10px;
   }
 }
 
 @media print {
   body {
     color: black !important;
-    background: #FFF;
+    background: #fff;
   }
 
   a {
     color: black !important;
   }
 
-  #header, #footer {
-    background-color:#fff;
+  #header,
+  #footer {
+    background-color: #fff;
     color: black;
   }
-  .search_container{
-    background-color:#fff;
+  .search_container {
+    background-color: #fff;
   }
 
   th.cat,
   td.cat {
-    display:none;
+    display: none;
   }
 
   tr {
-    page-break-inside:avoid;
-    page-break-after:auto;
+    page-break-inside: avoid;
+    page-break-after: auto;
   }
 
-  tbody tr{
+  tbody tr {
     background-color: #fff !important;
     border-top: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
